test/sema/traits/not_a_trait_trait_requirement_list.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:12: error: NotATrait is not a trait
trait A <: NotATrait {}

fn main() {}

// CHECK-NOT: main {() -> unit}
